test/cases/compile_errors/function_prototype_inferred_error_set.zig
extern fn entry1() !void;
// error
//
// 1:20: error: function prototype may not have inferred error set
